changed Llama 3 to 3.1

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
                 <h3 id="affirmation">Loading...</h3>
             </section>
             <button id="getNewAffirmationLlama" disabled>
-                Generate with Llama
+                Generate Affirmation with Llama
             </button>
             <button id="getNewAffirmationMistral" disabled>
-                Generate with Mistral
+                Generate Affirmation with Mistral
             </button>
         </main>
         <script type="module" src="/main.js"></script>
