--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <main>
             <h1><span>My Affirmations</span></h1>
+            <div id="imageContainer"></div>
             <section class="text">
                 <h3 id="affirmation">Loading...</h3>
             </section>
@@ -16,6 +17,9 @@
             </button>
             <button id="getNewAffirmationMistral" disabled>
                 Generate Affirmation with Mistral
+            </button>
+            <button id="generateImage" disabled>
+                Generate Image with SDXL
             </button>
         </main>
         <script type="module" src="/main.js"></script>
