--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             <section class="text">
                 <h3 id="affirmation">Loading...</h3>
             </section>
+            <span>
+                <button id="flowers" class="chip deselected">Flowers</button>
+                <button id="plants" class="chip deselected">Plants</button>
+                <button id="animals" class="chip deselected">Animals</button>
+            </span>
             <button id="getNewAffirmationLlama" disabled>
                 Generate Affirmation with Llama
             </button>
