--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Affirmations</title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>My Affirmations</title>
+    </head>
 
-<body>
-  <main>
-    <h1><span>My Affirmations</span></h1>
-    <section class="text">
-      <h3 id="affirmation">Loading...</h3>
-    </section>
-    <button id="getNewAffirmation" disabled>Generate with Claude 3</button>
-    <button id="getNewAffirmation2" disabled>Generate with Claude</button>
-  </main>
-  <script type="module" src="/main.js"></script>
-</body>
-
+    <body>
+        <main>
+            <h1><span>My Affirmations</span></h1>
+            <div id="imageContainer"></div>
+            <section class="text">
+                <h3 id="affirmation">Loading...</h3>
+            </section>
+            <span>
+                <button id="flowers" class="chip deselected">Flowers</button>
+                <button id="plants" class="chip deselected">Plants</button>
+                <button id="animals" class="chip deselected">Animals</button>
+            </span>
+            <button id="getNewAffirmation" disabled>
+                Generate Affirmation
+            </button>
+        </main>
+        <script type="module" src="/main.js"></script>
+    </body>
 </html>
